added user and request views with progressbar and validations

--- a/src/app/common/list-control/list-control.component.html
+++ b/src/app/common/list-control/list-control.component.html
@@ -1,5 +1,5 @@
 <p-panel>
-    <p-table [columns]="DisplayColumns" [value]="Items" [paginator]="true" [rows]="defaultPageSize" [(selection)]="selectedItems" dataKey="Id">
+    <p-table [columns]="DisplayColumns" [value]="Items" [paginator]="true" [rows]="defaultPageSize" [(selection)]="selectedItems" dataKey="_id">
             <ng-template pTemplate="header" let-columns>
                 <tr>
                     <th style="width: 2.25em">
