--- a/src/app/shared/dashboard/dashboard.component.html
+++ b/src/app/shared/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <!-- <div class="header ui-g-12 ui-md-12 ui-sm-12"> -->
-  <app-menu ></app-menu>
+  <app-menu></app-menu>
 <!-- </div> -->
 <hr/>
-<app-user-list></app-user-list>
+<!-- <app-user-list></app-user-list> -->
+<router-outlet></router-outlet>
 <!-- <div class="footer ui-g-12 ui-md-12 ui-sm-12"><app-footer></app-footer></div> -->
