--- a/src/app/shared/request/request.component.html
+++ b/src/app/shared/request/request.component.html
@@ -3,3 +3,5 @@
 [ActionItems]="ActionItems"
 (ListActions)="action($event)"
 ></app-list-control>
+
+<app-detail-view [SelectedItems]= "detailItem"></app-detail-view>
