--- a/src/app/shared/user-list/user-list.component.html
+++ b/src/app/shared/user-list/user-list.component.html
@@ -1,2 +1,2 @@
 <app-list-control  [ListData]="Items" [ActionItems]="ActionItems" (ListActions)="action($event)"></app-list-control>
-<app-detail-view ></app-detail-view>
+<app-detail-view [SelectedItems]= "detailItem"></app-detail-view>
