table view and pagination added

--- a/src/app/shared/entity/entity.component.html
+++ b/src/app/shared/entity/entity.component.html
@@ -1,5 +1,1 @@
-<app-list-control 
-[ListData]="Items"
-[ActionItems]="ActionItems"
-(ListActions)="action($event)"
-></app-list-control>
+<app-entity-view [EntityName] = "'entity'"></app-entity-view>
