--- a/src/app/common/detail-view/detail-view.component.html
+++ b/src/app/common/detail-view/detail-view.component.html
@@ -1,22 +1,15 @@
 <p-tabView>
     <p-tabPanel *ngIf="data" [header]="'general'" [selected]="true">
-
-        <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
-            <div *ngFor="let field of tabObject; let i =index" class="ui-grid-row">
-                <div  class="ui-grid-col-2">
-                    {{ field.col1.header }}:
-                </div>
-                <div  class="ui-grid-col-6">
-                    {{ field.col1.data }}
-                </div>
-                <div  class="ui-grid-col-2">
-                    {{ field.col2.header }}:
-                </div>
-                <div  class="ui-grid-col-6">
-                    {{ field.col2.data }}
-                </div>
+<div class="ui-g">
+        <div *ngFor="let field of priFields; let i =index"  class="ui-g-12 ui-md-6">
+            <div  class="ui-g-4">
+                    {{ field }}:
+            </div>
+            <div   class="ui-g-8">
+                    {{ this.data["SelectedItems"][0][field] }}
             </div>
         </div>
+    </div>
     </p-tabPanel>
   <p-tabPanel [header]="field" *ngFor="let field of nonPriFields; let i = index">
       <app-list-control [GenerateColumnAutomatic]="true" [ListData]="data['SelectedItems'][0][field]" ></app-list-control>
