--- a/src/app/common/list-control/list-control.component.html
+++ b/src/app/common/list-control/list-control.component.html
@@ -1,5 +1,5 @@
 <p-panel *ngIf="!HideList">
-    <p-table [columns]="DisplayColumns" [value]="Items" [paginator]="true" [rows]="defaultPageSize" [(selection)]="selectedItems" dataKey="_id">
+    <p-table  [columns]="DisplayColumns" [totalRecords]="totalRecords" [value]="Items"  [lazy]="true" (onLazyLoad)="loadLazy($event)" [paginator]="true" [rows]="defaultPageSize" [(selection)]="selectedItems" dataKey="_id">
             <ng-template pTemplate="header" let-columns>
                 <tr>
                     <th style="width: 2.25em">
@@ -20,15 +20,8 @@
                         {{rowData[col.field]}}
                     </td>
                 </tr>
-            </ng-template>
-            <!-- <ng-template pTemplate="summary">
-                <ul>
-                    <li *ngFor="let car of selectedCars3" style="text-align: left">
-                        {{car|json}}
-                    </li>
-                </ul>
-            </ng-template> -->
-            <ng-template pTemplate="summary" let-rowData>
+            </ng-template>         
+            <ng-template pTemplate="summary">
                 Actions
                       <div  style="text-align:center">
                           <button *ngFor="let action of ActionItems" [disabled]="disableAction(action?.MultiSelect,action?.ActionCode)" type="button" pButton icon="action?.Icon" (click)="actionCallback(action?.ActionCode)"label="{{action?.ActionName}}"></button>
