--- a/src/app/shared/user-list/user-list.component.html
+++ b/src/app/shared/user-list/user-list.component.html
@@ -1,2 +1,1 @@
-<app-list-control  [ListData]="Items" [ActionItems]="ActionItems" (ListActions)="action($event)"></app-list-control>
-<app-detail-view [SelectedItems]= "detailItem"></app-detail-view>
+<app-entity-view [EntityName] = "'user'"></app-entity-view>
